objects/vlocity_ins_fsc__InsurancePolicyTerm__c.object
<CustomObject>
    <description>Policy Terms object represents financial policy terms (e.g. Limits, Deductibles) for the Policy and Policy Coverages. Master-detail chid object of the Insurance Policy (InsurancePolicy).</description>
    <fields>
        <fullName>vlocity_ins_fsc__ApplicableItem__c</fullName>
        <formula>TEXT(vlocity_ins_fsc__AttributeId__r.vlocity_ins__ApplicableItem__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicable Item</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__AttributeClass__c</fullName>
        <formula>TEXT(vlocity_ins_fsc__AttributeId__r.vlocity_ins__AttributeClass__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__AttributeCode__c</fullName>
        <formula>vlocity_ins_fsc__AttributeId__r.vlocity_ins__Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__AttributeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attribute</label>
        <referenceTo>vlocity_ins__Attribute__c</referenceTo>
        <relationshipLabel>Policy Terms</relationshipLabel>
        <relationshipName>InsPolicyTermAttributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__AttributeScope__c</fullName>
        <formula>TEXT(vlocity_ins_fsc__AttributeId__r.vlocity_ins__AttributeScope__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Scope</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__AttributeSubType__c</fullName>
        <formula>vlocity_ins_fsc__AttributeId__r.vlocity_ins__SubType__c</formula>
        <label>Benefit Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__DurationType__c</fullName>
        <formula>TEXT(vlocity_ins_fsc__AttributeId__r.vlocity_ins__DurationType__c)</formula>
        <label>Duration Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__EffectiveYear__c</fullName>
        <label>Effective Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__InitialAmount__c</fullName>
        <label>Initial Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__InitialValue__c</fullName>
        <label>Initial Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__InsurancePolicyCoverageId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insurance Policy Coverage</label>
        <referenceTo>InsurancePolicyCoverage</referenceTo>
        <relationshipLabel>Policy Terms</relationshipLabel>
        <relationshipName>InsPolicyTermInsurancePolicyCoverages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__InsurancePolicyId__c</fullName>
        <label>Policy Version</label>
        <referenceTo>InsurancePolicy</referenceTo>
        <relationshipLabel>Policy Terms</relationshipLabel>
        <relationshipName>InsPolicyTermInsurancePolicies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__InsurancePolicyParticipantId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insured Party</label>
        <referenceTo>InsurancePolicyParticipant</referenceTo>
        <relationshipLabel>Policy Terms</relationshipLabel>
        <relationshipName>InsPolicyTermPolicyParticipants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__InsuredPolicyAssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insured Policy Asset</label>
        <referenceTo>InsurancePolicyAsset</referenceTo>
        <relationshipLabel>Policy Terms</relationshipLabel>
        <relationshipName>InsPolicyTermInsuredPolicyAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__IsClaimLineItemClaimedAmountAction__c</fullName>
        <formula>INCLUDES(vlocity_ins_fsc__AttributeId__r.vlocity_ins__ApplicableActions__c, &apos;ClaimLineItemClaimedAmountEntered&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ClaimLineItemClaimedAmount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__IsPaymentAttemptedAction__c</fullName>
        <formula>INCLUDES(vlocity_ins_fsc__AttributeId__r.vlocity_ins__ApplicableActions__c, &apos;PaymentAttempted&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PaymentAttempted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__IsReserveAdjustmentAttemptedAction__c</fullName>
        <formula>INCLUDES( vlocity_ins_fsc__AttributeId__r.vlocity_ins__ApplicableActions__c, &apos;ReserveAdjustmentAttempted&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReserveAdjustmentAttempted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__OriginalInsurancePolicyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Policy</label>
        <referenceTo>InsurancePolicy</referenceTo>
        <relationshipLabel>Policy Terms (Original Policy)</relationshipLabel>
        <relationshipName>InsPolicyTermOriginalPolicies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__ReferencePolicyNumber__c</fullName>
        <formula>vlocity_ins_fsc__InsurancePolicyId__r.UniversalPolicyNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reference Policy Number</label>
        <type>Text</type>
    </fields>
    <label>Insurance Policy Terms</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Policy Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>vlocity_ins_fsc__EffectiveYearValidation</fullName>
        <active>true</active>
        <errorConditionFormula>(VALUE(vlocity_ins_fsc__EffectiveYear__c) &lt;= 1970) || (VALUE(vlocity_ins_fsc__EffectiveYear__c) &gt;= 2100)</errorConditionFormula>
        <errorDisplayField>vlocity_ins_fsc__EffectiveYear__c</errorDisplayField>
        <errorMessage>Effective Year must be a valid year.</errorMessage>
    </validationRules>
</CustomObject>